--- a/app/assets/stylesheets/partials/user-activity-feed.css.scss
+++ b/app/assets/stylesheets/partials/user-activity-feed.css.scss
@@ -177,6 +177,31 @@
   }
 }
 
+.grid-list {
+  width: 100%;
+  padding: 8px 15px;
+  margin: 10px 0;
+  box-shadow: 0 0 1px #999;
+
+  &:hover {
+    cursor: move !important;
+  }
+  
+  .grid-list-thumb {
+    width: 50px;
+    margin-right: 15px; 
+    display: inline-block;
+  }
+
+  .grid-position {
+    @extend .pull-right;
+    display: block;
+    font-size: 1.1em;
+    font-weight: bold;
+    color: #999;
+  }
+}
+
 .move-overlay {
   background: rgba(0,0,0,.5);
   color: #fff;
