--- a/app/frontend/app/templates/kotodama.hbs
+++ b/app/frontend/app/templates/kotodama.hbs
@@ -54,6 +54,21 @@
           <button class="form-control btn btn-danger" {{action 'publishUpdate'}}>Make 'em Reload!</button>
         </div>
       </div>
+
+      <div class="panel panel-default">
+        <div class="panel-heading">Users to follow</div>
+        <div class="panel-body no-padding no-vpadding">
+          <table class="table table-striped">
+            <tbody>
+              {{#each user in usersToFollow}}
+                <tr><td>
+                  {{#link-to 'user' user}}{{user.username}}{{/link-to}}
+                </td></tr>
+              {{/each}}
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
 
 
@@ -86,34 +101,6 @@
               <button class="form-control btn status-button" {{action 'saveBlotter'}}>Save</button>
             </div>
           </div>
-        </div>
-      </div>
-
-      <div class="panel panel-default">
-        <div class="panel-heading">Users to follow</div>
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-md-8">
-              {{input type="text" class="form-control" value=userToFollow placeholder="Enter exact user name"}}
-            </div>
-            <div class="col-md-4">
-              <button class="btn status-button form-control" {{action 'addUserToFollow'}}>
-                <i class="fa fa-plus"></i> Add
-              </button>
-            </div>
-          </div>
-          <table class="table table-striped">
-            <tbody>
-              {{#each user in usersToFollow}}
-                <tr><td>
-                  <span class="pull-right delete">
-                    <i class="fa fa-minus-square-o" {{action 'removeUserToFollow' user}}></i>
-                  </span>
-                  {{#link-to 'user' user.id}}{{user.id}}{{/link-to}}
-                </td></tr>
-              {{/each}}
-            </tbody>
-          </table>
         </div>
       </div>
 
