Add nsfw indicator to stories and newStory

--- a/app/frontend/app/templates/components/post-comment.hbs
+++ b/app/frontend/app/templates/components/post-comment.hbs
@@ -3,4 +3,5 @@
 </div>
 <div class="panel-footer">
   <button class="btn status-button" {{action "submitPost"}}>Post</button>
+  {{input class="status-box" type="checkbox" name="nsfw" checked=newPostAdult}} nsfw
 </div>
