--- a/app/frontend/app/templates/story/comment.hbs
+++ b/app/frontend/app/templates/story/comment.hbs
@@ -55,6 +55,11 @@
   <a {{bind-attr class=":like isLiked:active"}} {{action "toggleLike"}}>
     <i class="fa fa-heart-o"></i> {{totalVotes}}
   </a>
+  {{#if adult}}
+    <span class="like nswf-indicator" data-tooltip="This post has been marked as nsfw!">
+      <i class="fa fa-warning"></i>
+    </span>
+  {{/if}}
   <ul class="active-users">
     {{#each recentLikers}}
       <li {{bind-attr data-tooltip=username}}>
