--- a/app/frontend/app/templates/user/index.hbs
+++ b/app/frontend/app/templates/user/index.hbs
@@ -221,7 +221,7 @@
 
 
     <div class="user-feed">
-      {{post-comment action="postComment"}}
+      {{post-comment action="postComment" currentUser=currentUser}}
 
       {{each content itemController="story" itemViewClass="story"}}
 
