--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -254,6 +254,13 @@
       }
     }
   }
+  .nswf-indicator {
+    @extend .pull-right;
+    color: #F87270;
+    display: inline-block;
+    padding: 0 15px 10px 15px;
+    font-size: 14px;
+  }
   .active-users {
     float: right;
     padding-right: 10px;
