--- a/app/frontend/app/templates/components/post-comment.hbs
+++ b/app/frontend/app/templates/components/post-comment.hbs
@@ -3,5 +3,7 @@
 </div>
 <div class="panel-footer">
   <button class="btn status-button" {{action "submitPost"}}>Post</button>
-  {{input class="status-box" type="checkbox" name="nsfw" checked=newPostAdult}} nsfw
+  {{#unless currentUser.sfwFilter}}
+    {{input class="status-box" type="checkbox" name="nsfw" checked=newPostAdult}} nsfw
+  {{/unless}}
 </div>
