--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -19,6 +19,13 @@
   }
 }
 
+.status-update-panel {
+  .status-box-wrapper {
+    display: inline-block;
+    padding-top: 6px;
+  }
+}
+
 .story {
   @extend .panel;
   @extend .panel-default;
@@ -255,10 +262,9 @@
     }
   }
   .nswf-indicator {
-    @extend .pull-right;
     color: #F87270;
     display: inline-block;
-    padding: 0 15px 10px 15px;
+    padding: 0 0 10px 15px;
     font-size: 14px;
   }
   .active-users {
