--- a/app/frontend/app/templates/story/comment.hbs
+++ b/app/frontend/app/templates/story/comment.hbs
@@ -53,7 +53,7 @@
 
 <div class="story-actions">
   {{#if adult}}
-    <span class="nswf-indicator" data-tooltip="This post has been marked as nsfw!">
+    <span class="nsfw-indicator" data-tooltip="This post has been marked as nsfw!">
       <i class="fa fa-warning"></i>
     </span>
   {{/if}}
