Migrate Waifus to be a character relation instead of a broken cache

--- a/frontend/app/templates/user/index.hbs
+++ b/frontend/app/templates/user/index.hbs
@@ -62,7 +62,7 @@
                       <div class="interest-icon"> <i class="fa fa-heart"></i></div>
                       <div class="interest">
                         {{user.waifuOrHusbando}} is
-                        {{#link-to 'anime' waifu_slug}} {{user.waifu}}{{/link-to}}
+                        {{#link-to user.waifu_primary_media_type user.waifu.primary_media_id}} {{user.waifu.name}}{{/link-to}}
                       </div>
                     {{/if}}
                   </li>
