Fix text displacement when there are no reviews

--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -516,6 +516,7 @@
 
     .trending-review-empty {
       text-align: center;
+      margin-top: 39px;
       margin-bottom: 35px;
       padding: 25px;
       padding-bottom: 0;
