--- a/app/frontend/app/templates/anime/_trending_reviews.hbs
+++ b/app/frontend/app/templates/anime/_trending_reviews.hbs
@@ -2,8 +2,7 @@
   {{partial "media/review_summary"}}
 {{else}}
   <div class="trending-review-empty">
-    <i class="empty-icon fa fa-meh-o"></i>
-    <p>You came to us for reviews and it seems nobody has written one yet. We're going to take a cold shower to wash away the shame. In the meantime, maybe you could write the first review? The fortune and fame are yours for the taking.</p>
+    <p>It seems nobody has written a review yet. The fame and fortune are yours for the taking.</p>
     <a class="btn btn-default" {{bind-attr href=newReviewURL}}>Write the first review</a>
   </div>
 {{/each}}
