--- a/app/views/pro_mailer/recur_email.html.erb.html
+++ b/app/views/pro_mailer/recur_email.html.erb.html
@@ -106,7 +106,7 @@
 
               <tr>
                 <td align="center" class="scale-center-both"><font style="font-family:'Proxima N W01 At Reg', Helvetica, Arial, sans-serif; font-size: 24px; color: #242424;" data-color="Big Headliness" data-size="Big Headliness" data-min="18" data-max="36">
-You're PRO subscription is about to expire!</font></td>
+Your PRO subscription is about to expire!</font></td>
               </tr>
 
 
