Fix favorite search form to not show move cursor

--- a/app/assets/stylesheets/partials/user-activity-feed.css.scss
+++ b/app/assets/stylesheets/partials/user-activity-feed.css.scss
@@ -267,9 +267,11 @@
   .fav-search {
     height: auto;
     padding: 10px;
+    cursor: initial !important;
     input {
       border: none;
       color: #e67e22;
+      width: 100%;
     }
     .badge {
       display: none;
