--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -261,7 +261,7 @@
       }
     }
   }
-  .nswf-indicator {
+  .nsfw-indicator {
     color: #F87270;
     display: inline-block;
     padding: 0 0 10px 15px;
