--- a/app/frontend/app/templates/components/post-comment.hbs
+++ b/app/frontend/app/templates/components/post-comment.hbs
@@ -4,9 +4,11 @@
 <div class="panel-footer">
   <button class="btn status-button" {{action "submitPost"}}>Post</button>
   {{#unless currentUser.sfwFilter}}
-    <span class="status-box-wrapper">
-      {{input class="status-box" type="checkbox" name="nsfw" checked=newPostAdult}}
-      <span id="status-box-text">nsfw</span>
-    </span>
+    {{#if currentUser.betaAccess}}
+      <span class="status-box-wrapper">
+        {{input class="status-box" type="checkbox" name="nsfw" checked=newPostAdult}}
+        <span id="status-box-text">nsfw</span>
+      </span>
+    {{/if}}
   {{/unless}}
 </div>
