--- a/app/frontend/app/templates/components/favorite-search.hbs
+++ b/app/frontend/app/templates/components/favorite-search.hbs
@@ -1,9 +1,9 @@
 {{input value=query classNames="search-field" placeholder="Search for..."}}
 
 
-{{#if searchResults}}
+{{#if filteredSearchResults}}
   <ul class="search-dropdown">
-    {{#each result in searchResults}}
+    {{#each result in filteredSearchResults}}
       <li class="search-result grid-list">
           <div class="grid-position">
             <a {{action 'addMediaToFavorites' result}}>
