--- a/app/frontend/app/templates/user/index.hbs
+++ b/app/frontend/app/templates/user/index.hbs
@@ -217,7 +217,7 @@
         {{ad-unit adId="1298406" adClass="257f81e798bd68dd81e60f42838f361f"}}
       </div>
 
-      {{! {{#if currentUser.isPro}}
+      {{#if currentUser.betaAccess}}
         <div class="favorite-anime">
           <div class="panel-heading">
             <h3 class="panel-title"> Favorite Manga</h3>
@@ -243,7 +243,7 @@
         <div class="feed-sidebar-advert">
           {{ad-unit adId="1298406" adClass="257f81e798bd68dd81e60f42838f361f"}}
         </div>
-      {{! {{/if}}
+      {{/if}}
     </div>
 
 
