--- a/app/frontend/app/templates/user/index.hbs
+++ b/app/frontend/app/templates/user/index.hbs
@@ -205,7 +205,7 @@
           {{/if}}
         </div>
         <div class="panel-body">
-          {{favorite-container favorites=favoriteAnimeList containerType="anime" currentUser=currentUser isEditing=editingAnimeFavorites user=user}}
+          {{favorite-container favorites=favoriteAnimeList containerType="anime" currentUser=currentUser isEditing=editingAnimeFavorites isLoading=favoriteAnimeLoading user=user}}
           {{#if favoriteAnimeLoadMore}}
             <div class="more-wrapper">
               <a class="view-more-button" {{action "loadMoreFavoriteAnime"}}> View More</a>
@@ -232,7 +232,7 @@
             {{/if}}
           </div>
           <div class="panel-body">
-            {{favorite-container favorites=favoriteMangaList containerType="manga" currentUser=currentUser isEditing=editingMangaFavorites user=user}}
+            {{favorite-container favorites=favoriteMangaList containerType="manga" currentUser=currentUser isEditing=editingMangaFavorites isLoading=favoriteMangaLoading user=user}}
             {{#if favoriteMangaLoadMore}}
               <div class="more-wrapper">
                 <a class="view-more-button" {{action "loadMoreFavoriteManga"}}> View More</a>
