--- a/app/frontend/app/templates/user/index.hbs
+++ b/app/frontend/app/templates/user/index.hbs
@@ -191,55 +191,13 @@
       {{/if}}
 
 
-      <div class="favorite-anime">
-        <div class="panel-heading">
-          <h3 class="panel-title"> Favorite Anime</h3>
-          {{#if viewingSelf}}
-            <span class="edit-panel">
-              {{#unless editingAnimeFavorites}}
-                <a {{action "editFavAnime"}}><i class="fa fa-pencil"></i></a>
-              {{else}}
-                <a class="btn btn-xs btn-default" {{action "doneEditingFav" "anime"}}> Save</a>
-              {{/unless}}
-            </span>
-          {{/if}}
-        </div>
-        <div class="panel-body">
-          {{favorite-container favorites=favoriteAnimeList containerType="anime" currentUser=currentUser isEditing=editingAnimeFavorites isLoading=favoriteAnimeLoading user=user}}
-          {{#if favoriteAnimeLoadMore}}
-            <div class="more-wrapper">
-              <a class="view-more-button" {{action "loadMoreFavoriteAnime"}}> View More</a>
-            </div>
-          {{/if}}
-        </div>
-      </div>
+      {{favorite-container favorites=favoriteAnime containerType="anime" currentUser=currentUser user=user}}
       <div class="feed-sidebar-advert">
         {{ad-unit adId="1298406" adClass="257f81e798bd68dd81e60f42838f361f"}}
       </div>
 
       {{#if currentUser.betaAccess}}
-        <div class="favorite-anime">
-          <div class="panel-heading">
-            <h3 class="panel-title"> Favorite Manga</h3>
-            {{#if viewingSelf}}
-              <span class="edit-panel">
-                {{#unless editingMangaFavorites}}
-                  <a {{action "editFavManga"}}><i class="fa fa-pencil"></i></a>
-                {{else}}
-                  <a class="btn btn-xs btn-default" {{action "doneEditingFav" "manga"}}> Save</a>
-                {{/unless}}
-              </span>
-            {{/if}}
-          </div>
-          <div class="panel-body">
-            {{favorite-container favorites=favoriteMangaList containerType="manga" currentUser=currentUser isEditing=editingMangaFavorites isLoading=favoriteMangaLoading user=user}}
-            {{#if favoriteMangaLoadMore}}
-              <div class="more-wrapper">
-                <a class="view-more-button" {{action "loadMoreFavoriteManga"}}> View More</a>
-              </div>
-            {{/if}}
-          </div>
-        </div>
+        {{favorite-container favorites=favoriteManga containerType="manga" currentUser=currentUser user=user}}
         <div class="feed-sidebar-advert">
           {{ad-unit adId="1298406" adClass="257f81e798bd68dd81e60f42838f361f"}}
         </div>
