Improve the review summary partial.
* x of y users found this review helpful.
* Avatar and username link to the user's page.

--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -663,9 +663,19 @@
   }
 }
 
-.full-review {
+.review-details {
+  @extend .clearfix;
+
   font-size: 12px;
   text-align: right;
+
+  .review-likes {
+    float: left;
+  }
+
+  .full-review {
+    float: right;
+  }
 }
 
 .review-source {
