Show review votes on review page as well.

--- a/app/frontend/app/templates/reviews/show.hbs
+++ b/app/frontend/app/templates/reviews/show.hbs
@@ -97,6 +97,9 @@
           <i class="fa fa-thumbs-o-down"></i>
         </a>
       </div>
+      <div class="review-likes" style="margin-top: 10px">
+        {{positiveVotes}} out of {{totalVotes}} users found this review helpful.
+      </div>
     </div>
   </div>
   <!-- End Right Side -->
