Change property name to showAnimeFavs since it checks for box type

--- a/app/frontend/app/templates/components/favorite-container.hbs
+++ b/app/frontend/app/templates/components/favorite-container.hbs
@@ -1,4 +1,4 @@
-{{#if showSelf}}
+{{#if showAnimeFavorites}}
   <div class="favorite-anime">
     <div class="panel-heading">
       <h3 class="panel-title">
