Profile navigation fix on mobile.
Fixed the profile navigation from getting collapsed at <= 661px.
http://i.imgur.com/Y77yphA.png

--- a/app/assets/stylesheets/partials/user-index.css.scss
+++ b/app/assets/stylesheets/partials/user-index.css.scss
@@ -44,6 +44,15 @@
       }
     }
 
+    @media (max-width: 661px) {
+      .container {
+        .row {
+          position: relative;
+          bottom: 40px;
+        }
+      }
+    }
+
     // Hide less important links on mobile
     @media (max-width: 560px) {
       .reviews-link, .lists-link {
